--- a/index.html
+++ b/index.html
@@ -50,20 +50,21 @@
 <body>
   <header>
     <h1>[Seu Nome]</h1>
-    <p>Engenheira de Dados | Analista BI | Cientista de Dados</p>
+    <p>Engenheira de Dados | Projetos em Python e IA</p>
     <p><a href="mailto:email@exemplo.com">email@exemplo.com</a> | <a href="https://linkedin.com/in/seulink" target="_blank">LinkedIn</a> | <a href="https://github.com/seuusuario" target="_blank">GitHub</a></p>
   </header>
 
   <section>
     <h2>Sobre Mim</h2>
     <div class="card">
-      <p>Profissional de dados com experiência em engenharia de dados, visualização e automação de processos. Certificada em AWS e apaixonada por transformar dados em decisões estratégicas.</p>
+      <p>Profissional de tecnologia com foco em projetos de dados, automações e aplicações com Python. Tenho experiência em projetos de machine learning, reconhecimento de áudio, visualização de dados e soluções para tomada de decisão.</p>
     </div>
 
     <h2>Habilidades Técnicas</h2>
     <div class="card">
       <ul>
         <li><strong>Linguagens:</strong> Python, SQL, Bash</li>
+        <li><strong>Bibliotecas Python:</strong> Pandas, Numpy, Scikit-learn, SpeechRecognition, pyaudio</li>
         <li><strong>Cloud:</strong> AWS (S3, Glue, Lambda)</li>
         <li><strong>Banco de Dados:</strong> PostgreSQL, MySQL, Redshift</li>
         <li><strong>Ferramentas:</strong> Airflow, dbt, Power BI, Tableau</li>
@@ -72,6 +73,11 @@
     </div>
 
     <h2>Projetos</h2>
+    <div class="card">
+      <h3>🎙️ Reconhecimento de Áudio com Python</h3>
+      <p>Sistema de reconhecimento de voz usando bibliotecas Python como <code>SpeechRecognition</code> e <code>pyaudio</code> para converter comandos falados em texto. Aplicação voltada para segurança e automação de tarefas.</p>
+      <p><strong>Stack:</strong> Python, SpeechRecognition, pyaudio, Google Speech API</p>
+    </div>
     <div class="card">
       <h3>🔍 Detecção de Fraudes com Machine Learning</h3>
       <p>Modelo de classificação treinado para detectar transações suspeitas em dados financeiros. Visualizações feitas em Power BI.</p>
