--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfólio Profissional - [Seu Nome]</title>
+  <title>Portfólio Profissional - Jheniffer Duarte</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -49,7 +49,7 @@
 </head>
 <body>
   <header>
-    <h1>[Seu Nome]</h1>
+    <h1>Jheniffer Duarte</h1>
     <p>Engenheira de Dados | Projetos em Python e IA</p>
     <p><a href="mailto:email@exemplo.com">email@exemplo.com</a> | <a href="https://linkedin.com/in/seulink" target="_blank">LinkedIn</a> | <a href="https://github.com/seuusuario" target="_blank">GitHub</a></p>
   </header>
